[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scenes/SelectorDeNiveles/SelectorNivel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MenuDeEleccionDePersonajes/Fondo.png" type="Texture" id=2]
[ext_resource path="res://Art/Font/Ancient Modern Tales.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/Foes/BOSS3/Idle/tile000.png" type="Texture" id=4]
[ext_resource path="res://Art/Foes/BOSS3/Idle/tile001.png" type="Texture" id=5]
[ext_resource path="res://Art/Foes/BOSS3/Idle/tile002.png" type="Texture" id=6]
[ext_resource path="res://Art/Foes/BOSS3/Idle/tile003.png" type="Texture" id=7]
[ext_resource path="res://Art/Foes/BOSS3/Idle/tile004.png" type="Texture" id=8]
[ext_resource path="res://Art/Foes/BOSS3/Idle/tile005.png" type="Texture" id=9]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal2.png" type="Texture" id=10]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal3.png" type="Texture" id=11]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal4.png" type="Texture" id=12]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal5.png" type="Texture" id=13]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal6.png" type="Texture" id=14]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal7.png" type="Texture" id=15]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal8.png" type="Texture" id=16]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal9.png" type="Texture" id=17]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal10.png" type="Texture" id=18]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal11.png" type="Texture" id=19]
[ext_resource path="res://Art/Foes/Summoner/Normal/Normal12.png" type="Texture" id=20]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei1.png" type="Texture" id=21]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei2.png" type="Texture" id=22]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei3.png" type="Texture" id=23]
[ext_resource path="res://Art/Foes/DarkEmperor/DarkEmperorIdle/dei4.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]

size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "Animacion"
length = 1.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.847656, 0, 0, 1 ), Color( 0.683594, 0, 0, 1 ), Color( 0.449219, 0, 0, 1 ), Color( 0.285156, 0, 0, 1 ), Color( 0.0976563, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 0.167969, 0, 0, 1 ), Color( 0.289063, 0, 0, 1 ), Color( 0.476563, 0, 0, 1 ), Color( 0.714844, 0, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Normal",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CanvasLayer" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
personaje1 = null
personaje2 = null
personaje3 = null

[node name="MarginContainer" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="TextureRect" type="TextureRect" parent="MarginContainer" index="0"]

modulate = Color( 0.203125, 0.203125, 0.203125, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1105.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin", "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1105.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1097.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.160773, 0, 0, 1 )
text = "Boss Select"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Label" index="0"]

root_node = NodePath("..")
autoplay = "Animacion"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Animacion = SubResource( 2 )
blend_times = [  ]

[node name="TextureRect" type="TextureRect" parent="." index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -259.0
margin_top = -298.0
margin_right = -108.0
margin_bottom = -86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[node name="Personaje1" type="Button" parent="TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = -18.0
margin_right = 194.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
pressed = true
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
clip_text = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="TextureRect/Personaje1" index="0"]

position = Vector2( 89.8098, 99.1406 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
animation = "Normal"
frame = 2
playing = true
_sections_unfolded = [ "Transform" ]

[node name="TextureRect2" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 73.0
margin_top = -284.0
margin_right = 273.0
margin_bottom = -51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[node name="Personaje2" type="Button" parent="TextureRect2" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_top = -218.0
margin_right = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="TextureRect2/Personaje2" index="0"]

modulate = Color( 0, 0, 0, 1 )
position = Vector2( 79.0085, 102.491 )
scale = Vector2( 4.3, 4.3 )
frames = SubResource( 4 )
animation = "Idle"
frame = 2
playing = true
flip_h = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="TextureRect3" type="TextureRect" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="Personaje3" type="Button" parent="TextureRect3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -17.0
margin_right = 145.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1
_sections_unfolded = [ "Margin" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="TextureRect3/Personaje3" index="0"]

position = Vector2( 69.7509, 67.8449 )
scale = Vector2( 4, 4 )
frames = SubResource( 5 )
animation = "default"
frame = 3
playing = true
_sections_unfolded = [ "Transform" ]


